--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,20 @@
-# === PYTHON / FLASK BACKEND ===
 __pycache__/
 *.py[cod]
 *.pyo
 *.pyd
 *.pyc
 *.log
+
+# Python/Flask extra
+.envrc
+.mypy_cache/
+.tox/
+.coverage.*
+*.egg-info/
+*.egg
+pip-log.txt
+pip-delete-this-directory.txt
+migrations/versions/__pycache__/
 
 # Virtual environments
 venv/
@@ -27,12 +37,16 @@ htmlcov/
 # Migrations (if using Flask-Migrate/Alembic)
 migrations/
 
-# === FRONTEND / REACT ===
 frontend/node_modules/
 frontend/build/
 frontend/.env
 
-# === OS / EDITOR FILES ===
+# React extra
+frontend/coverage/
+frontend/npm-debug.log*
+frontend/yarn-debug.log*
+frontend/yarn-error.log*
+
 .DS_Store
 Thumbs.db
 *.swp
@@ -40,10 +54,17 @@ Thumbs.db
 *.bak
 *.tmp
 
+# Editor/IDE
+*.sublime-workspace
+*.sublime-project
+.idea/
+.pdm.toml
+.pdm.lock
+.ruff_cache/
+
 # VS Code settings (optional)
 .vscode/
 
-# === GENERAL LOGS AND TEMP FILES ===
 *.log
 *.pid
 *.tgz
@@ -52,4 +73,5 @@ Thumbs.db
 *.tar
 *.log.*
 *.tmp
-*.env
+*.orig
+*.rej
