--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,5 @@
 FLASK_ENV=development
-DATABASE_URL="sqlite:///C:/Users/adila/OneDrive/Desktop/SplitTrack/backend/dev.db"
+#DATABASE_URL="sqlite:///C:/Users/adila/OneDrive/Desktop/SplitTrack/backend/dev.db"
 JWT_SECRET_KEY=qwdnklqwndqwdnkqndnsswq2323
 
-# Uncomment for production (MySQL)
-# DATABASE_URL=mysql+pymysql://username:password@localhost/expense_manager
+DATABASE_URL=
