--- a/.gitignore
+++ b/.gitignore
@@ -16,10 +16,11 @@ pip-log.txt
 pip-delete-this-directory.txt
 migrations/versions/__pycache__/
 
-# Virtual environments
 venv/
+# Ignore .env files everywhere
 .env
 .env.*
+**/.env
 
 # SQLite database
 *.sqlite3
